[package]
name = "solana-safe-math"
version = "0.1.0"
edition = "2018"
authors = ["Pavlos Polianidis <info@apocentre.com>"]
repository = "https://github.com/Apocentre/solana-safe-math"
description = "Safe Math wrapper for the primitive numberic types used in a Solana program"
homepage = "https://github.com/Apocentre/solana-safe-math"
documentation = "https://docs.rs/solana-safe-math/"
readme = "README.md"
keywords = ["solana", "blockchain"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.8.5"
thiserror = "1.0.30"
